2006-07-19  Stefan Jahn  <stefan@lkcc.org>

	* schematic.cpp (contentsDropEvent): Fixed file name conversion
	from URI object.

2006-07-18  Stefan Jahn  <stefan@lkcc.org>

	* qucsdigi, qucsdigi.bat: Added -q argument to enable quiet
	mode of the simulation binary.

2006-07-15  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new import file format: ZVR ASCII format
	* resize rectangles are scale-independent
	* number of print copies
	* label dialog rejects two "_" together
	* several frame formats

2006-07-15  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug at "zoom 1" on empty page
	* new document property: schematic page frame
	* browse window on left-hand side is dockable
	* fixed segfault on drag n'drop library components

2006-07-03  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/diagram.cpp (loadVarData): Fixed compile time error.

2006-07-02  Stefan Jahn  <stefan@lkcc.org>

	* main.cpp (main): Setting up locale to "C" for numeric
	values, such that strtod() does not fail.

2006-06-19  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug showing no scrollbar
	* support file extension "vhd" as VHDL text file
	* fixed bug creating wrong version on loading library components
	* library components can be placed onto the schematic via drag n'drop
	* rework digital diagram data (vector length > 16 now possible)
	* digital diagrams can display analog variables
	* tabular can display digital data
	* fixed bug in y-Smith chart with |r| > 1
	* tried to compensate aliasing in round diagrams
	* new action: import data file using qucsconv
	* mstee and mscross with port numbers (can also be hidden)
	* new action: export graph data to CSV file
	* user can create project packages for data exchange
	* fixed bug corrupting diagram scrollbar
	* remembered last directory the same for most dialogs
	* fixed bug missing symbol at second SPICE component
	* also delete projects if there are subdirectories